--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2674,7 +2674,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/poster-sessions.pdf");
+		background-image: url("../../images/main.png");
 		background-position: center center;
 		background-size: cover;
 		height: 28em;
