--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2674,12 +2674,13 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/main.jpeg");
-		background-position: center center;
+		background-image: url("../../images/aachen_orange.jpg");
+		background-position: center bottom;
 		background-size: cover;
 		height: 28em;
 		text-align: center;
 		position: relative;
+        background-attachment: fixed;
 	}
 
 		#banner header {
