--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2674,7 +2674,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-image: url("../../images/aachen_orange.jpg");
+		background-image: url("../../images/Sky.jpg");
 		background-position: center bottom;
 		background-size: cover;
 		height: 28em;
