--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2722,7 +2722,7 @@ input, select, textarea {
 
 
 	#banner2 {
-		background-image: url("../../images/Glasgow_Briggs.jpg");
+		background-image: url("images/Glasgow_Briggs.jpg");
 		background-position: center bottom;
 		background-size: cover;
 		height: 28em;
