--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2728,6 +2728,41 @@ input, select, textarea {
         background-attachment: fixed;
 	}
 
+		#banner2 header {
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			background: #212121;
+			background: rgba(27, 27, 27, 0.75);
+			color: #fff;
+			padding: 1.5em 0;
+		}
+
+			#banner2 header h2 {
+				display: inline-block;
+				margin: 0;
+				font-size: 1.25em;
+				vertical-align: middle;
+			}
+
+				#banner2 header h2 em {
+					opacity: 0.95;
+				}
+
+				#banner header h2 a {
+					border-bottom-color: rgba(255, 255, 255, 0.5);
+				}
+
+					#banner header h2 a:hover {
+						border-bottom-color: transparent;
+					}
+
+			#banner2 header .button {
+				vertical-align: middle;
+				margin-left: 1em;
+			}
+
 
 
 /* Wrapper */
