--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2750,11 +2750,11 @@ input, select, textarea {
 					opacity: 0.95;
 				}
 
-				#banner header h2 a {
+				#banner2 header h2 a {
 					border-bottom-color: rgba(255, 255, 255, 0.5);
 				}
 
-					#banner header h2 a:hover {
+					#banner2 header h2 a:hover {
 						border-bottom-color: transparent;
 					}
 
