--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2552,11 +2552,11 @@ input, select, textarea {
 
 	#nav {
 		cursor: default;
-		background-color: #333;
-		background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
-		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.3)), url("images/bg01.png");
+		background-color: #fff;
+		background-image: -moz-linear-gradient(top, rgba(255,255,255, 0.9), rgba(255,255,255, 0.9)), url("images/bg01.png");
+		background-image: -webkit-linear-gradient(top, rgba(255,255,255, 0.9), rgba(255,255,255, 0.9)), url("images/bg01.png");
+		background-image: -ms-linear-gradient(top, rgba(255,255,255, 0.9), rgba(255,255,255, 0.9)), url("images/bg01.png");
+		background-image: linear-gradient(top, rgba(255,255,255, 0.9), rgba(255,255,255, 0.9)), url("images/bg01.png");
 		padding: 0;
 	}
 
@@ -2580,7 +2580,7 @@ input, select, textarea {
 			}
 
 				#nav > ul > li a {
-					color: #c0c0c0;
+					color: #333;
 					text-decoration: none;
 					border: 0;
 					display: block;
@@ -2592,7 +2592,7 @@ input, select, textarea {
 				}
 
 				#nav > ul > li:hover a {
-					color: #fff;
+					color: #000;
 				}
 
 				#nav > ul > li.current {
@@ -2617,11 +2617,11 @@ input, select, textarea {
 					}
 
 					#nav > ul > li.current a {
-						color: #fff;
+						color: #000;
 					}
 
 				#nav > ul > li.active a {
-					color: #fff;
+					color: #000;
 				}
 
 				#nav > ul > li.active.current:before {
